update `font_family` & `font_size`

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,5 +2,5 @@
 include         github.conf
 
 # Fonts
-font_family     Hack Nerd Font Mono Bold
-font_size       25
+font_family     Fira Code SemiBold
+font_size       20
