`Fira Code Bold` -> `Fira Code Retina`

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,5 +2,5 @@
 include         ./gruvbox_dark.conf
 
 # Fonts
-font_family     Fira Code SemiBold
+font_family     Fira Code Retina
 font_size       20
