--- a/.config/i3/config
+++ b/.config/i3/config
@@ -17,22 +17,27 @@ set $darkgray #1d2021
 font pango:Fira Code Nerd Font Mono 14
 
 bar {
-        status_command py3status
+  status_command py3status
 	position top
 	colors {
-		background 	     $bg
+		background 	         $bg
 		statusline           $yellow
 		focused_workspace    $aqua $aqua $darkgray
-		inactive_workspace   $darkgray $darkgray $yellow
-		active_workspace     $darkgray $darkgray $yellow
+		inactive_workspace   $gray $gray $darkgray
+		active_workspace     $gray $gray $darkgray
 		urgent_workspace     $red $red $bg
 	}
 }
 
-client.focused          $green $green $darkgray $purple $darkgray
-client.focused_inactive $darkgray $darkgray $yellow $purple $darkgray
-client.unfocused        $darkgray $darkgray $yellow $purple $darkgray
-client.urgent           $red $red $white $red $red
+client.focused          $green    $green    $darkgray $purple $darkgray
+client.focused_inactive $darkgray $darkgray $yellow   $purple $darkgray
+client.unfocused        $darkgray $darkgray $yellow   $purple $darkgray
+client.urgent           $red      $red      $white    $red    $red
+
+gaps inner 8
+default_border pixel 2
+default_floating_border none
+hide_edge_borders none
 
 bindsym $mod+q kill
 bindsym $mod+Return exec kitty
@@ -49,8 +54,8 @@ bindsym $mod+Shift+$up move up
 bindsym $mod+Shift+$down move down
 bindsym $mod+Shift+$left move left
 bindsym $mod+Shift+$right move right
-bindsym $mod+Shift+x split h
-bindsym $mod+Shift+v split v
+bindsym $mod+Shift+x split v
+bindsym $mod+Shift+v split h
 bindsym $mod+Shift+f fullscreen toggle
 bindsym $mod+Shift+t layout tabbed
 bindsym $mod+Shift+d layout default
@@ -77,7 +82,7 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ to
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
 floating_modifier $mod
-bindsym $mod+d exec --no-startup-id dmenu_run
+bindsym $mod+space exec --no-startup-id "rofi -modi window,drun,run -show drun"
 
 mode "resize" {
 	bindsym $up resize grow up 10 px or 10 ppt
@@ -92,16 +97,14 @@ mode "resize" {
 	bindsym $left resize grow left 10 px or 10 ppt
 	bindsym Shift+$left resize shrink left 10 px or 10 ppt
 
-        # back to normal: Enter or Escape
+  # back to normal: Enter or Escape
 	bindsym Return mode "default"
 	bindsym Escape mode "default"
 }
 
-for_window [class=".*"] border pixel 0
-gaps inner 8
-gaps outer 8
 exec --no-startup-id xrandr --output HDMI-1-0 --mode 3440x1440 --left-of eDP --output eDP --mode 1920x1080 --pos 0x0
 exec --no-startup-id feh --bg-fill ~/.config/wallpapers/astronaut.png
 exec_always --no-startup-id "killall -q compton; compton --config ~/.config/i3/compton.conf"
+exec_always --no-startup-id exec i3-workspace-names-daemon
 workspace 1 output HDMI-1-0
 workspace 2 output eDP
