--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,7 +2,7 @@
 include         ./gruvbox_dark.conf
 
 # Fonts
-font_family     Fira Code Retina
+font_family     Fira Code Retina Nerd Font Complete Mono 
 font_size       16
 
 # Others
