modify `kitty` theme

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,9 +1,13 @@
 # Theme
-include         ./gruvbox_dark.conf
+include         ./themes/frappe.conf
 
 # Fonts
-font_family     Fira Code Retina Nerd Font Complete Mono 
-font_size       16
+font_family     FiraCode Nerd Font Mono 
+font_size       18
 
-# Others
-sync_to_monitor no
+# Tabs
+tab_bar_min_tabs            1
+tab_bar_edge                bottom
+tab_bar_style               powerline
+tab_powerline_style         slanted
+tab_title_template          {title}{' :{}:'.format(num_windows) if num_windows > 1 else ''}
