--- a/.gitconfig
+++ b/.gitconfig
@@ -4,6 +4,12 @@
     s = status
     unadd = reset
     uncommit = reset HEAD^
+    a = add .
+    c = commit
+    ps = push
+    pl = pull
+    at = !git add . && git commit -m "🧪" && git push
+    co = checkout
 [core]
     editor = nvim
 [diff]
