--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -5,6 +5,7 @@ font-size = "18"
 
 shell-integration-features = no-cursor
 cursor-style = "block"
+cursor-style-blink = false
 
 macos-titlebar-style = "tabs"
 macos-titlebar-proxy-icon = "hidden"
