update zed `settings.json`

--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -1,9 +1,19 @@
 {
+  "chat_panel": {
+    "dock": "left"
+  },
+  "assistant": {
+    "default_model": {
+      "provider": "copilot_chat",
+      "model": "claude-3-5-sonnet"
+    },
+    "version": "2"
+  },
   "project_panel": {
     "dock": "left"
   },
   "collaboration_panel": {
-    "dock": "right"
+    "dock": "left"
   },
   "toolbar": {
     "breadcrumbs": false,
